--- a/Barcaliente.WebUI/Web.config
+++ b/Barcaliente.WebUI/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="Context" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=barcaliente;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
