--- a/Barcaliente.WebUI/Web.config
+++ b/Barcaliente.WebUI/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Context" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=barcaliente;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="context" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=barcaliente;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
