actual page link is selected on menu

--- a/Barcaliente.WebUI/Barcaliente.WebUI.csproj
+++ b/Barcaliente.WebUI/Barcaliente.WebUI.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\MenuExtensions.cs" />
     <Compile Include="Infarstructure\NinjectControllerFactory.cs" />
     <Compile Include="Models\MenuCategoryViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
