few images, subpages text by requirenments

--- a/Barcaliente.WebUI/Barcaliente.WebUI.csproj
+++ b/Barcaliente.WebUI/Barcaliente.WebUI.csproj
@@ -163,7 +163,18 @@
     <Content Include="Content\images\bg-pagination.png" />
     <Content Include="Content\images\bg-span-button.png" />
     <Content Include="Content\images\button-box-after.png" />
+    <Content Include="Content\images\dishes\1349693978209.jpg" />
+    <Content Include="Content\images\dishes\burrito.jpg" />
+    <Content Include="Content\images\dishes\Cheesy-Garlic-Bread-11-600x398.jpg" />
+    <Content Include="Content\images\dishes\Chiliconcarne.jpg" />
+    <Content Include="Content\images\dishes\don kogutto sałatka.jpg" />
+    <Content Include="Content\images\dishes\fajita.jpg" />
+    <Content Include="Content\images\dishes\greckasałatka.jpg" />
     <Content Include="Content\images\favicon.ico" />
+    <Content Include="Content\images\gallery\DSC_3157.jpg" />
+    <Content Include="Content\images\gallery\DSC_3158.jpg" />
+    <Content Include="Content\images\gallery\DSC_3165.jpg" />
+    <Content Include="Content\images\gallery\DSC_3167.jpg" />
     <Content Include="Content\images\indicator.png" />
     <Content Include="Content\images\line-hor.png" />
     <Content Include="Content\images\logo.png" />
