--- a/Barcaliente.WebUI/Barcaliente.WebUI.csproj
+++ b/Barcaliente.WebUI/Barcaliente.WebUI.csproj
@@ -163,13 +163,13 @@
     <Content Include="Content\images\bg-pagination.png" />
     <Content Include="Content\images\bg-span-button.png" />
     <Content Include="Content\images\button-box-after.png" />
-    <Content Include="Content\images\dishes\1349693978209.jpg" />
-    <Content Include="Content\images\dishes\burrito.jpg" />
-    <Content Include="Content\images\dishes\Cheesy-Garlic-Bread-11-600x398.jpg" />
-    <Content Include="Content\images\dishes\Chiliconcarne.jpg" />
-    <Content Include="Content\images\dishes\don kogutto sałatka.jpg" />
-    <Content Include="Content\images\dishes\fajita.jpg" />
-    <Content Include="Content\images\dishes\greckasałatka.jpg" />
+    <Content Include="Content\images\meals\1349693978209.jpg" />
+    <Content Include="Content\images\meals\burrito.jpg" />
+    <Content Include="Content\images\meals\Cheesy-Garlic-Bread-11-600x398.jpg" />
+    <Content Include="Content\images\meals\Chiliconcarne.jpg" />
+    <Content Include="Content\images\meals\don kogutto sałatka.jpg" />
+    <Content Include="Content\images\meals\fajita.jpg" />
+    <Content Include="Content\images\meals\greckasałatka.jpg" />
     <Content Include="Content\images\favicon.ico" />
     <Content Include="Content\images\gallery\DSC_3157.jpg" />
     <Content Include="Content\images\gallery\DSC_3158.jpg" />
