--- a/Barcaliente.WebUI/Barcaliente.WebUI.csproj
+++ b/Barcaliente.WebUI/Barcaliente.WebUI.csproj
@@ -165,11 +165,14 @@
     <Content Include="Content\images\bg-pagination.png" />
     <Content Include="Content\images\bg-span-button.png" />
     <Content Include="Content\images\button-box-after.png" />
+    <Content Include="Content\images\logo-barcaliente.png" />
+    <Content Include="Content\images\logo.old.png" />
     <Content Include="Content\images\meals\1349693978209.jpg" />
     <Content Include="Content\images\meals\burrito.jpg" />
     <Content Include="Content\images\meals\Cheesy-Garlic-Bread-11-600x398.jpg" />
     <Content Include="Content\images\meals\Chiliconcarne.jpg" />
     <Content Include="Content\images\meals\don kogutto sałatka.jpg" />
+    <Content Include="Content\images\meals\donkoguttosałatka.jpg" />
     <Content Include="Content\images\meals\fajita.jpg" />
     <Content Include="Content\images\meals\greckasalatka.jpg" />
     <Content Include="Content\images\favicon.ico" />
@@ -184,6 +187,9 @@
     <Content Include="Content\images\marker-2.png" />
     <Content Include="Content\images\marker-3.png" />
     <Content Include="Content\images\marker.png" />
+    <Content Include="Content\images\meals\karkowkamuchomacho.jpg" />
+    <Content Include="Content\images\meals\koreczki.jpg" />
+    <Content Include="Content\images\meals\tacos.jpg" />
     <Content Include="Content\images\next.png" />
     <Content Include="Content\images\page-1-img-1.jpg" />
     <Content Include="Content\images\page-1-img.jpg" />
