client side validation messges

--- a/Barcaliente.WebUI/Areas/Administration/Views/Web.config
+++ b/Barcaliente.WebUI/Areas/Administration/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="Barcaliente.Domain.Entities" />
+        <add namespace="Barcaliente.WebUI.Areas.Administration.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
