--- a/Barcaliente.WebUI/Web.config
+++ b/Barcaliente.WebUI/Web.config
@@ -32,6 +32,7 @@
     </pages>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Custom"></httpErrors>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
